# ptolemy

./: AUTHORS.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.rst  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
examples/: README.rst  build.sh
examples/mappings/: add_a_prefix.json  convert_to_uppercase.json  migrate_all_tables_in_a_schema.json  migrate_some_tables_in_a_schema.json  multiple_filter_operators.json  rename_a_table.json  replace_a_prefix.json  single_filter.json
examples/src/: add_a_prefix.yaml  migrate_some_tables_in_a_schema.yaml  remove_a_column.yaml  rename_a_column.yaml  rename_a_schema.yaml
integration_tests/features/: compilation.feature
integration_tests/fixtures/mappings/: convert_to_lowercase.json  multiple_filters.json  remove_a_column.json  remove_a_suffix.json  rename_a_column.json  rename_a_schema.json
integration_tests/fixtures/src/: convert_to_lowercase.yaml  convert_to_uppercase.yaml  migrate_all_tables_in_a_schema.yaml  multiple_filter_operators.yaml  multiple_filters.yaml  remove_a_suffix.yaml  rename_a_table.yaml  replace_a_prefix.yaml  single_filter.yaml
integration_tests/steps/: compilation.py
ptolemy/: __init__.py  cli.py  exceptions.py  mapping.py  source.py
ptolemy/data/: source-schema.yaml
tests/: test_cli.py  test_mapping.py  test_source.py
