[metadata]
name = ptolemy
author = James Routley
author-email = jroutley@gmail.com
summary = Write terse AWS DMS table mappings.
description-file = README.rst
home-page = https://github.com/cloudreach/ptolemy
license = Apache Software License 2.0
classifier =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6

keywords =
    ptolemy

[files]
packages =
    ptolemy

[entry_points]
console_scripts =
    ptolemy = ptolemy.cli:main

[extras]
testing =
    pip>=8.1.2
    behave>=1.2.5
    wheel>=0.29.0
    flake8>=3.0.4
    tox>=2.4.1
    coverage>=4.1
    pytest>=3.0.3
    mock>=2.0.0
    pylint>=1.6.4

dev =
    tox>=2.4.1


[bdist_wheel]
universal = 1
